syntax = "proto3";

package greet;

option go_package = "grpcLectures/greet/proto";

message GreetRequest {
  string first_name = 1;
}

message GreetResponse {
  string result = 1;
}

service GreetService {
  rpc Greet (GreetRequest) returns (GreetResponse);
}

message SumRequest {
  int32 first = 1;
  int32 second = 2;
}

message SumResponse {
  int32 sum = 1;
}

service SumService {
  rpc Sum (SumRequest) returns (SumResponse);
}